en/3.0/config/logging.rst
============
Log settings
============

This page is generated by Machine Translation from Japanese.

Log file
========

The following summarizes the log file to output the Fess.

+-----------------------------------------------+----------------------------------------------------------------------------------------+
| File name                                     | Contents                                                                               |
+-----------------------------------------------+----------------------------------------------------------------------------------------+
| webapps/fess/WEB-INF/logs/fess.out            | Fess server log. Output logging operation in the management and search screens, etc.   |
+-----------------------------------------------+----------------------------------------------------------------------------------------+
| webapps/fess/WEB-INF/logs/fess\_crawler.out   | Crawl log. Crawling log output.                                                        |
+-----------------------------------------------+----------------------------------------------------------------------------------------+
| logs/Catalina.out                             | Log of the Fess Server (Tomcat). SOLR relevant log output.                             |
+-----------------------------------------------+----------------------------------------------------------------------------------------+

If you encounter problems to work check the log.

Log settings
============

Sets the output log information is at
webapps/fess/WEB-INF/classes/log4j.xml. By default output INFO level.

For example, better Fess up to document for Solr log if you want to
output in log4j.xml disconnect the commented-out section below.

::

    <logger name="jp.sf.fess.solr" >
        <level value ="debug" />
    </logger>

See the Log4J documentation if you need detailed settings for the log
output.
